--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@storybook/addons": "5.0.11"
   },
   "dependencies": {
+    "@storybook/addon-info": "5.0.11",
+    "@storybook/addon-knobs": "5.0.11",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6"
