--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@storybook/addon-info": "5.0.11",
+    "@storybook/addon-knobs": "5.0.11",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6"
